--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>pl.wowbagger</groupId>
-  <artifactId>standard-project-archetype</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <name>Archetype - standard-project</name>
-  <url>http://maven.apache.org</url>
-  <description>simple base project with java configured for 1.6 and encoding to utf-8</description>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>pl.wowbagger</groupId>
+	<artifactId>standard-project-archetype</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<name>Archetype - standard-project</name>
+	<url>http://maven.apache.org</url>
+	<description>simple base project with java configured for 1.6 and encoding to utf-8</description>
+
+	<scm>
+		<url>https://github.com/msetkowski/standard-project-archetype.git</url>
+		<developerConnection>scm:git:https://github.com/msetkowski/standard-project-archetype.git</developerConnection>
+		<connection>scm:git:https://github.com/msetkowski/standard-project-archetype.git</connection>
+		<tag>HEAD</tag>
+	</scm>
 </project>
