--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,22 @@
 		<developerConnection>scm:git:https://github.com/msetkowski/standard-project-archetype.git</developerConnection>
 		<connection>scm:git:https://github.com/msetkowski/standard-project-archetype.git</connection>
 	</scm>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.4.3</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.3.2</version>
+			</plugin>
+		</plugins>
+	</build>
 </project>
