--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>pl.wowbagger</groupId>
 	<artifactId>standard-project-archetype</artifactId>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 	<name>Archetype - standard-project</name>
 	<url>http://maven.apache.org</url>
 	<description>simple base project with java configured for 1.6 and encoding to utf-8</description>
@@ -11,7 +11,7 @@
 		<url>https://github.com/msetkowski/standard-project-archetype.git</url>
 		<developerConnection>scm:git:https://github.com/msetkowski/standard-project-archetype.git</developerConnection>
 		<connection>scm:git:https://github.com/msetkowski/standard-project-archetype.git</connection>
-	  <tag>standard-project-archetype-1.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 	
 	<build>
